objects/Quote_Line_Address__c.object
<CustomObject>
    <fields>
        <fullName>Quote_Address__c</fullName>
        <label>Quote Address</label>
        <referenceTo>Quote_Address__c</referenceTo>
        <relationshipLabel>Quote Line Addresses</relationshipLabel>
        <relationshipName>Quote_Line_Addresses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quote_Line__c</fullName>
        <label>Quote Line</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SBQQ__QuoteLine__c.SBQQ__ProductFamily__c</field>
                <operation>equals</operation>
                <value>Product</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Quote Line Addresses</relationshipLabel>
        <relationshipName>Quote_Line_Addresses</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quote_Record_Id__c</fullName>
        <formula>Quote_Address__r.Quote__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Record Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Quantity__c</fullName>
        <label>Shipping Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Quote Line Address</label>
    <nameField>
        <label>Quote Line Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Line Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>